--- a/src/Club/MessageBundle/Resources/views/AdminMessage/form.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/form.html.twig
@@ -1,18 +1,10 @@
-  <fieldset>
     <legend>{% trans %}Sender{% endtrans %}</legend>
     {{ form_row(form.sender_name) }}
     {{ form_row(form.sender_address) }}
-  </fieldset>
 
-  <fieldset>
     <legend>{% trans %}Message{% endtrans %}</legend>
     {{ form_row(form.subject) }}
-    <p>
-      {{ form_label(form.message) }}<br />
-      {{ form_widget(form.message, {'attr': {'class':'big' }}) }}
-      {{ form_errors(form.message) }}<br />
-    </p>
+    {{ form_row(form.message) }}
     {{ form_rest(form) }}
-  </fieldset>
 
   {% include "ClubLayoutBundle:Default:submit_button.html.twig" with {'novalidate':true, 'button':'Next'|trans} %}
