--- a/src/Club/MessageBundle/Resources/views/AdminMessage/new.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/new.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<form method="post" action="{{ path('club_message_adminmessage_new') }}">
+<form method="post" action="{{ path('club_message_adminmessage_new') }}" class="form-horizontal">
   {% include "ClubMessageBundle:AdminMessage:form.html.twig" %}
 </form>
 {% endblock %}
