--- a/src/Club/UserBundle/Resources/views/AdminUser/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('admin_user_create') }}">
+<form method="post" action="{{ path('admin_user_create') }}" class="form-horizontal">
 {% include "ClubUserBundle:AdminUser:form.html.twig" %}
 </form>
 
