--- a/src/Club/BookingBundle/Resources/views/AdminInterval/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminInterval/index.html.twig
@@ -1,11 +1,17 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
-{% block body %}
-<p class="box">
-  <a href="{{ path('club_booking_admininterval_new', {'field_id':field.id}) }}" class="btn-create"><span>{% trans %}Create interval{% endtrans %}</span></a>
-  <a href="{{ path('club_booking_admininterval_manage', {'field_id':field.id}) }}" class="btn-create"><span>{% trans %}Manage intervals{% endtrans %}</span></a>
-</p>
+{% block pagenav %}
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('club_booking_admininterval_new', {'field_id':field.id}) }}">{% trans %}Create interval{% endtrans %}</a></li>
+            <li><a href="{{ path('club_booking_admininterval_manage', {'field_id':field.id}) }}">{% trans %}Manage intervals{% endtrans %}</a></li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
 
+{% block body %}
 <table class="table">
   <thead>
     <tr>
