--- a/src/Club/MatchBundle/Resources/views/Match/show.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Match/show.html.twig
@@ -1,16 +1,21 @@
 {% extends "ClubMatchBundle::base.html.twig" %}
 
-{% block body %}
-
+{% block pagenav %}
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-<p class="box">
-  <a href="{{ path('club_match_matchcomment_new', { 'match_id':match.id }) }}" class="btn-info"><span>{% trans %}Add comment{% endtrans %}</span></a>
-  {% if match.isOwner(app.user) %}
-  <a href="{{ path('club_match_match_delete', { 'id':match.id }) }}" class="btn-info"><span>{% trans %}Delete match{% endtrans %}</span></a>
-  {% endif %}
-</p>
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('club_match_matchcomment_new', { 'match_id':match.id }) }}">{% trans %}Add comment{% endtrans %}</a></li>
+            {% if match.isOwner(app.user) %}
+            <li><a href="{{ path('club_match_match_delete', { 'id':match.id }) }}">{% trans %}Delete match{% endtrans %}</a></li>
+            {% endif %}
+        </ul>
+    </div>
+</div>
 {% endif %}
+{% endblock %}
 
+{% block body %}
 <table class="table">
   <thead>
     <tr>
