--- a/src/Club/MessageBundle/Resources/views/AdminMessage/edit.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/edit.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<form method="post" action="{{ path('club_message_adminmessage_edit', {'id':message.id}) }}">
+<form method="post" action="{{ path('club_message_adminmessage_edit', {'id':message.id}) }}" class="form-horizontal">
 
   {% include "ClubMessageBundle:AdminMessage:form.html.twig" %}
 
