--- a/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
@@ -1,13 +1,18 @@
 {% extends "ClubMessageBundle::base.html.twig" %}
 
-{% block body %}
-<p class="box">
-  <a href="{{ path('club_message_adminmessage_recipientuser', {'id':message.id}) }}" class="btn-create"><span>{% trans %}Add user{% endtrans %}</span></a>
-  <a href="{{ path('club_message_adminmessage_recipientgroup', {'id':message.id}) }}" class="btn-create"><span>{% trans %}Add group{% endtrans %}</span></a>
-  <a href="{{ path('club_message_adminmessage_recipientevent', {'id':message.id}) }}" class="btn-create"><span>{% trans %}Add event{% endtrans %}</span></a>
-  <a href="{{ path('club_message_adminmessage_recipientfilter', {'id':message.id}) }}" class="btn-create"><span>{% trans %}Add filter{% endtrans %}</span></a>
-</p>
+{% block pagenav %}
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('club_message_adminmessage_recipientuser', {'id':message.id}) }}">{% trans %}Add user{% endtrans %}</a></li>
+            <li><a href="{{ path('club_message_adminmessage_recipientgroup', {'id':message.id}) }}">{% trans %}Add group{% endtrans %}</a></li>
+            <li><a href="{{ path('club_message_adminmessage_recipientevent', {'id':message.id}) }}">{% trans %}Add event{% endtrans %}</a></li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
 
+{% block body %}
 <fieldset>
   <legend>{% trans %}Recipients{% endtrans %}</legend>
 
