--- a/src/Club/ShopBundle/Resources/views/AdminProduct/noCategory.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProduct/noCategory.html.twig
@@ -1,7 +1,15 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
-{% block body %}
-<p class="box"><a href="{{ path('admin_shop_category_new') }}" class="btn-create"><span>Create category</span></a></p>
+{% block pagenav %}
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('admin_shop_category_new') }}">{% trans %}Create category{% endtrans %}</a></li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
 
+{% block body %}
 {% include "ClubLayoutBundle:Default:flash_error.html.twig" with {'msg':'You cannot add any products without a category.'|trans} %}
 {% endblock %}
