--- a/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
@@ -1,9 +1,16 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
+{% block pagenav %}
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('shop_checkout') }}">{% trans %}View cart{% endtrans %}</a></li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
+
 {% block body %}
-
-<p class="box"><a href="{{ path('shop_checkout') }}" class="btn-info"><span>{% trans %}View cart{% endtrans %}</span></a></p>
-
 {% if categories|length > 0 %}
 <h3>{% trans %}Categories{% endtrans %}</h3>
 
