--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/index.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/index.html.twig
@@ -1,8 +1,16 @@
 {% extends "ClubTeamBundle::base.html.twig" %}
 
-{% block body %}
-<p class="box"><a href="{{ path('club_team_adminschedule_new', {'category_id':category.id}) }}" class="btn-create"><span>{% trans %}Create schedule{% endtrans %}</span></a></p>
+{% block pagenav %}
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('club_team_adminschedule_new', {'category_id':category.id}) }}">{% trans %}Create schedule{% endtrans %}</a></li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
 
+{% block body %}
 <table class="table">
   <thead>
     <tr>
