--- a/src/Club/UserBundle/Resources/views/AdminUser/form.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/form.html.twig
@@ -1,40 +1,26 @@
-  <fieldset>
     <legend>{% trans %}Password{% endtrans %}</legend>
-
     <p>{{ form_row(form.password) }}</p>
-  </fieldset>
 
-  <fieldset>
     <legend>{% trans %}Personal Information{% endtrans %}</legend>
-
     {{ form_row(form.member_number) }}
     {{ form_row(form.profile.first_name) }}
     {{ form_row(form.profile.last_name) }}
     {{ form_row(form.profile.gender) }}
     {{ form_row(form.profile.day_of_birth) }}
-  </fieldset>
 
-  <fieldset>
     <legend>{% trans %}Address Information{% endtrans %}</legend>
-
     {{ form_row(form.profile.profile_address.street) }}
     {{ form_row(form.profile.profile_address.postal_code) }}
     {{ form_row(form.profile.profile_address.city) }}
     {{ form_row(form.profile.profile_address.country) }}
-  </fieldset>
 
-  <fieldset>
     <legend>{% trans %}Email Information{% endtrans %}</legend>
+    {% for email in form.profile.profile_emails %}
+        {{ form_row(email.email_address) }}
+    {% endfor %}
 
-    {{ form_row(form.profile.profile_email.email_address) }}
-  </fieldset>
-
-  <fieldset>
     <legend>{% trans %}Phone Information{% endtrans %}</legend>
-
     {{ form_row(form.profile.profile_phone.phone_number) }}
-  </fieldset>
 
-  {{ form_row(form._token) }}
-  {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
-
+    {{ form_row(form._token) }}
+    {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
