--- a/src/Club/UserBundle/Resources/views/AdminUser/header.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/header.html.twig
@@ -1,7 +1,13 @@
-<p class="box">
-  <a href="{{ path('admin_user_edit', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Edit{% endtrans %}</span></a>
-  <a href="{{ path('admin_shop_subscription', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Subscription{% endtrans %}</span></a>
-  <a href="{{ path('admin_user_group', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Group{% endtrans %}</span></a>
-  <a href="{{ path('admin_user_note', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Notes{% endtrans %}</span></a>
-  <a href="{{ path('club_user_adminuser_shop', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Shop as{% endtrans %}</span></a>
-</p>
+{% block pagenav %}
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('admin_user_edit', { 'id':user.id }) }}">{% trans %}Edit{% endtrans %}</a></li>
+            <li><a href="{{ path('admin_shop_subscription', { 'id':user.id }) }}">{% trans %}Subscription{% endtrans %}</a></li>
+            <li><a href="{{ path('admin_user_group', { 'id':user.id }) }}">{% trans %}Group{% endtrans %}</a></li>
+            <li><a href="{{ path('admin_user_note', { 'id':user.id }) }}">{% trans %}Notes{% endtrans %}</a></li>
+            <li><a href="{{ path('club_user_adminuser_shop', { 'id':user.id }) }}">{% trans %}Shop as{% endtrans %}</a></li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
