--- a/src/Club/UserBundle/Resources/views/Currency/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Currency/index.html.twig
@@ -1,8 +1,16 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-{% block body %}
-<p class="box"><a href="{{ path('admin_currency_new') }}" class="btn-create"><span>{% trans %}Create currency{% endtrans %}</span></a></p>
+{% block pagenav %}
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('admin_currency_new') }}">{% trans %}Create currency{% endtrans %}</a></li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
 
+{% block body %}
 <table class="table">
   <thead>
     <tr>
