ifxed all buttons.

--- a/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
@@ -7,8 +7,8 @@
 
 <h4>{% trans %}Member number{% endtrans %}: 1</h4>
 
-<p class="box">
-  <a href="{{ path('homepage') }}" class="btn"><span>{% trans %}Go to ClubMaster{% endtrans %}</span></a>
+<p>
+  <a href="{{ path('homepage') }}" class="btn">{% trans %}Go to ClubMaster{% endtrans %}</a>
 </p>
 
 {% endblock %}
