--- a/src/Club/InstallerBundle/Resources/views/Installer/index.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/index.html.twig
@@ -13,8 +13,8 @@
   <li>{% trans %}Location setup{% endtrans %}</li>
 </ul>
 
-<p class="box">
-  <a href="{{ path("club_installer_installer_database") }}" class="btn"><span>{% trans %}Start installation{% endtrans %}</span></a>
+<p>
+  <a href="{{ path("club_installer_installer_database") }}" class="btn">{% trans %}Start installation{% endtrans %}</a>
 </p>
 
 {% endblock %}
