--- a/src/Club/MatchBundle/Resources/views/League/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/League/index.html.twig
@@ -1,11 +1,16 @@
 {% extends "ClubMatchBundle::base.html.twig" %}
 
-{% block body %}
+{% block pagenav %}
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="{{ path('club_match_match_new') }}">{% trans %}Insert match{% endtrans %}</a></li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
 
-<h3>All matches</h3>
-<p class="box">
-  <a href="{{ path('club_match_match_new') }}" class="btn-create"><span>{% trans %}Insert match{% endtrans %}</span></a>
-</p>
+{% block body %}
 {% render "ClubMatchBundle:Match:Recent" with {'limit':20} %}
 
 {% for league in leagues %}
