Fixed LOTS of form elements.

--- a/src/Club/BookingBundle/Resources/views/AdminField/new.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminField/new.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('club_booking_adminfield_new') }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_booking_adminfield_new')} %}
 {% endblock %}
