--- a/src/Club/BookingBundle/Resources/views/AdminPlan/new.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_booking_adminplan_new') }}">
+<form method="post" action="{{ path('club_booking_adminplan_new') }}" class="form-horizontal">
 {% include "ClubBookingBundle:AdminPlan:form.html.twig" %}
 </form>
 
