--- a/src/Club/EventBundle/Resources/views/AdminEvent/new.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/new.html.twig
@@ -5,9 +5,5 @@
 {% endblock %}
 
 {% block body %}
-
-<form method="post" action="{{ path('club_event_adminevent_new') }}">
-{% include "ClubEventBundle:AdminEvent:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_event_adminevent_new')}  %}
 {% endblock %}
