--- a/src/Club/ShopBundle/Resources/views/AdminCoupon/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCoupon/edit.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('club_shop_admincoupon_edit', {'id':coupon.id}) }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_shop_admincoupon_edit', {'id':coupon.id})} %}
 {% endblock %}
