--- a/src/Club/UserBundle/Resources/views/AdminLocationConfig/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminLocationConfig/index.html.twig
@@ -5,8 +5,6 @@
 
 <p>{% trans %}If a location does not have any settings, it will relay on its parents.{% endtrans %}</p>
 
-<form method="post" action="{{ path('admin_location_config', {'id':location.id}) }}">
-{% include "ClubUserBundle:AdminLocationConfig:form.html.twig" %}
-</form>
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_location_config', {'id':location.id})} %}
 
 {% endblock %}
