--- a/src/Club/BookingBundle/Resources/views/AdminInterval/new.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminInterval/new.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('club_booking_admininterval_new', {'field_id':field.id}) }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_booking_admininterval_new', {'field_id':field.id})} %}
 {% endblock %}
