--- a/src/Club/EventBundle/Resources/views/AdminAttend/edit.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/edit.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubEventBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('admin_event_event_edit', {'id':event.id}) }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_event_event_edit', {'id':event.id})} %}
 {% endblock %}
