--- a/src/Club/LayoutBundle/Resources/views/Default/form.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/form.html.twig
@@ -1,3 +1,5 @@
-{% if legend is defined %}<legend>{{ legend}}</legend>{% endif %}
-{{ form_widget(form) }}
-{% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+<form method="post" action="{{ path }}" class="form-horizontal" {{ form_enctype(form) }}>
+    {% if legend is defined %}<legend>{{ legend}}</legend>{% endif %}
+    {{ form_widget(form) }}
+    {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+</form>
