--- a/src/Club/MatchBundle/Resources/views/AdminLeague/new.html.twig
+++ b/src/Club/MatchBundle/Resources/views/AdminLeague/new.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubMatchBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('club_match_adminleague_new') }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_match_adminleague_new')} %}
 {% endblock %}
