--- a/src/Club/ShopBundle/Resources/views/AdminOrderStatus/new.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrderStatus/new.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('club_shop_adminorderstatus_new') }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_shop_adminorderstatus_new')} %}
 {% endblock %}
