--- a/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/new.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/new.html.twig
@@ -5,9 +5,5 @@
 {% endblock %}
 
 {% block body %}
-
-<form method="post" action="{{ path('admin_shop_payment_method_new') }}">
-{% include "ClubShopBundle:AdminPaymentMethod:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_shop_payment_method_new')} %}
 {% endblock %}
