--- a/src/Club/ShopBundle/Resources/views/AdminProduct/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProduct/edit.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('admin_shop_product_edit', {'id':product.id}) }}" class="form-horizontal">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_shop_product_edit', {'id':product.id})} %}
 {% endblock %}
