--- a/src/Club/ShopBundle/Resources/views/AdminShipping/new.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminShipping/new.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('admin_shop_shipping_new') }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_shop_shipping_new')} %}
 {% endblock %}
