--- a/src/Club/ShopBundle/Resources/views/Checkout/payment.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/payment.html.twig
@@ -5,15 +5,10 @@
 
 {% include "ClubShopBundle:Checkout:checkouttop.html.twig" with {'page':'payment'} %}
 
-<form method="POST" action="{{ path('shop_checkout_payment') }}">
-<fieldset>
-  <legend>Payment Information</legend>
-
-  <p>{{ form_widget(form) }}</p>
-
-</fieldset>
-
-{% include "ClubLayoutBundle:Default:submit_button.html.twig" with {'button':'Continue'} %}
+<form method="POST" action="{{ path('shop_checkout_payment') }}" class="form-horizontal">
+    <legend>{% trans %}Payment Information{% endtrans %}</legend>
+    <p>{{ form_widget(form) }}</p>
+    {% include "ClubLayoutBundle:Default:submit_button.html.twig" with {'button':'Continue'} %}
 </form>
 
 {% endblock %}
