--- a/src/Club/ShopBundle/Resources/views/Checkout/shipping.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/shipping.html.twig
@@ -5,15 +5,13 @@
 
 {% include "ClubShopBundle:Checkout:checkouttop.html.twig" with {'page':'shipping'}  %}
 
-<form method="POST" action="{{ path('shop_checkout_shipping') }}">
-<fieldset>
-  <legend>{% trans %}Shipping Information{% endtrans %}</legend>
+<form method="POST" action="{{ path('shop_checkout_shipping') }}" class="form-horizontal">
 
+  <legend>{% trans %}Shipping Information{% endtrans %}</legend>
   <p>{{ form_widget(form1) }}</p>
   <p>{{ form_widget(form2) }}</p>
-
   <p><input type="submit" value="Continue" class="input-submit" /></p>
-</fieldset>
+
 </form>
 
 {% endblock %}
