--- a/src/Club/TaskBundle/Resources/views/AdminTask/edit.html.twig
+++ b/src/Club/TaskBundle/Resources/views/AdminTask/edit.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubTaskBundle::base.html.twig" %}
 
 {% block body %}
-
-<form method="post" action="{{ path('club_task_admintask_edit', {'id':task.id}) }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_task_admintask_edit', {'id':task.id})} %}
 {% endblock %}
