--- a/src/Club/UserBundle/Resources/views/AdminGroup/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/new.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 <h2>{% trans %}Group{% endtrans %}</h2>
-<form method="post" action="{{ path('admin_group_new') }}">
+<form method="post" action="{{ path('admin_group_new') }}" class="form-horizontal">
 {% include "ClubUserBundle:AdminGroup:form.html.twig" %}
 </form>
 
