--- a/src/Club/BookingBundle/Resources/views/base.html.twig
+++ b/src/Club/BookingBundle/Resources/views/base.html.twig
@@ -2,6 +2,6 @@
 
 {% block header %}
 <div class="page-header">
-    <h1>{% trans %}Booking{% endtrans %}</h1>
+    <h1><img src="{{ asset('bundles/clublayout/images/icons/32x32/time.png') }}" /> {% trans %}Booking{% endtrans %}</h1>
 </div>
 {% endblock %}
