--- a/src/Club/MatchBundle/Resources/views/base.html.twig
+++ b/src/Club/MatchBundle/Resources/views/base.html.twig
@@ -2,6 +2,6 @@
 
 {% block header %}
 <div class="page-header">
-    <h1>{% trans %}Match{% endtrans %}</h1>
+    <h1><img src="{{ asset('bundles/clublayout/images/icons/32x32/medal_gold_1.png') }}" /> {% trans %}Match{% endtrans %}</h1>
 </div>
 {% endblock %}
