--- a/src/Club/ShopBundle/Resources/views/base.html.twig
+++ b/src/Club/ShopBundle/Resources/views/base.html.twig
@@ -2,6 +2,6 @@
 
 {% block header %}
 <div class="page-header">
-    <h1>{% trans %}Shop{% endtrans %}</h1>
+    <h1><img src="{{ asset('bundles/clublayout/images/icons/32x32/basket.png') }}" /> {% trans %}Shop{% endtrans %}</h1>
 </div>
 {% endblock %}
