--- a/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
@@ -11,25 +11,8 @@
 {% endblock %}
 
 {% block body %}
-{% if categories|length > 0 %}
-<h3>{% trans %}Categories{% endtrans %}</h3>
 
-{% for cat in categories %}
-<!-- Button -->
-<div class="btn-box">
-<div class="btn-top"></div>
-<div class="btn">
-  <dl>
-    <dt><a href="{{ path('shop_prod_view', {'id':cat.id}) }}">{{ cat.categoryName }}</a> ({{ cat.getProducts|length }})</dt>
-    <dd>{{ cat.description|truncate(40) }}</dd>
-  </dl>
-</div> <!-- /btn -->
-<div class="btn-bottom"></div>
-</div> <!-- /btn-box -->
-{% endfor %}
-
-<div class="fix"></div>
-{% endif %}
+{% include "ClubShopBundle:Shop:categories.html.twig" %}
 
 {% if category %}
   {% include "ClubShopBundle:Shop:product_table.html.twig" with {'products':category.products} %}
