Added smart border on header icons.

--- a/src/Club/LayoutBundle/Resources/views/Default/login_form.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/login_form.html.twig
@@ -5,8 +5,8 @@
 
                 <fieldset>
                     <legend>{% trans %}Login{% endtrans %}</legend>
-                    <p><input class="input-medium" type="text" name="_username" id="login_username" placeholder="{% trans %}Member number{% endtrans %}" /></p>
-                    <p><input class="input-medium" type="password" name="_password" placeholder="{% trans %}Password{% endtrans %}" /></p>
+                    <p><input class="span12" type="text" name="_username" id="login_username" placeholder="{% trans %}Member number{% endtrans %}" /></p>
+                    <p><input class="span12" type="password" name="_password" placeholder="{% trans %}Password{% endtrans %}" /></p>
                     <p><button type="submit" class="btn btn-primary">{% trans %}Login{% endtrans %}</button></p>
                 </fieldset>
 
