--- a/src/Club/EventBundle/Resources/views/base.html.twig
+++ b/src/Club/EventBundle/Resources/views/base.html.twig
@@ -2,6 +2,6 @@
 
 {% block header %}
 <div class="page-header">
-    <h1><img src="{{ asset('bundles/clublayout/images/icons/32x32/calendar.png') }}" /> {% trans %}Event{% endtrans %}</h1>
+    <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/calendar.png') }}" /> {% trans %}Event{% endtrans %}</h1>
 </div>
 {% endblock %}
