--- a/src/Club/UserBundle/Resources/views/Member/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Member/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block header %}
 <div class="page-header">
-    <h1><img src="{{ asset('bundles/clublayout/images/icons/32x32/group.png') }}" /> {% trans %}Members{% endtrans %}</h1>
+    <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/group.png') }}" /> {% trans %}Members{% endtrans %}</h1>
 </div>
 {% endblock %}
 
