--- a/src/Club/ShopBundle/Resources/views/Shop/categories.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/categories.html.twig
@@ -1,21 +1,23 @@
 {% if categories|length > 0 %}
 <h3>{% trans %}Categories{% endtrans %}</h3>
 
-{% for item in categories %}
+<div class="row-fluid">
+    {% for item in categories %}
     {% if loop.index0 is divisibleby(3) %}
-      <div class="row-fluid">
+    <ul class="thumbnails">
     {% endif %}
-
-        <div class="span4 thumbnail">
-          <h4><a href="{{ path('shop_prod_view', {'id':item.id}) }}">{{ item.categoryName }}</a> ({{ item.getProducts|length }})</h4>
-          <p>{{ item.description|truncate(40) }}</p>
-        </div>
+        <li class="span4">
+            <div class="thumbnail">
+                <h4><a href="{{ path('shop_prod_view', {'id':item.id}) }}">{{ item.categoryName }}</a> ({{ item.getProducts|length }})</h4>
+                <p>{{ item.description|truncate(40) }}</p>
+            </div>
+        </li>
 
     {% if loop.index is divisibleby(3) or loop.last %}
-      </div>
-      <br />
+    </ul>
     {% endif %}
-{% endfor %}
+    {% endfor %}
+</div>
 
 <hr>
 {% endif %}
