--- a/src/Club/RequestBundle/Resources/views/PlayerMarket/new.html.twig
+++ b/src/Club/RequestBundle/Resources/views/PlayerMarket/new.html.twig
@@ -2,8 +2,6 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_request_playermarket_new') }}" class="form-horizontal">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_request_playermarket_new'),'novalidate':true} %}
 
 {% endblock %}
